--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/src/train.py",
+            // "program": "${workspaceFolder}/src/train.py",
+            "program": "${workspaceFolder}/src/predict.py",
             "console": "integratedTerminal",
             "args": [
             ]
